@@ -5,8 +5,8 @@ AUX avahi-0.6.24-cmsg_space.patch 449 RMD160 9593ee893daf908e35f36a7396ae5d52a76
 AUX avahi-0.6.24-libintl.patch 542 RMD160 918aa11cdbce6f38d9a9446c798db2bc43a957b5 SHA1 c9f8ef5d0047b591e6e88153731ae380d64a2431 SHA256 fb8e37d6071a990184a7ad3c20a7709554103fb2c4f02450c338b9fbcf358215
 DIST avahi-0.6.24.tar.gz 1115626 RMD160 94f59ccbd14d99e91e259b27dd7f03404c6691e6 SHA1 a187af361fefc8bda026936bb07ccdeb41dc74bc SHA256 260070d46188ed58f5dc1174ce632c096679f6391a2b729366e7aba349d4b950
 DIST avahi-0.6.25.tar.gz 1103653 RMD160 3025f774360a8ea3b9de87e2df0b00387569aaf2 SHA1 7ce8ed5a494d72401dd81f64594fda59d2ec91fd SHA256 9220d974f5515b8ccfa3900cd72cedcac0fa4cc87ca3c64405f7c55346cbba59
-EBUILD avahi-0.6.24-r2.ebuild 5291 RMD160 6025eb3ee902ac67fcd114461eaffe4c6fbf77c8 SHA1 f0e8f33d626f44a66f8d016cf66dfbff9c213c4b SHA256 39f244d90ab318750317289646445416a5a1e1b0f8fa733fbf827a1c01560761
-EBUILD avahi-0.6.25-r1.ebuild 4785 RMD160 c4fbcbebdb5b245f420c15242654d2a023adcfaf SHA1 770181b3b34a2678e7e4a29daaef700367b79005 SHA256 a17ad4abad9ec639583b5bfa86f875eccd965a3cf4cb3b9173b10e76ca52e46d
-EBUILD avahi-0.6.25.ebuild 5243 RMD160 f95574bfc1a13b8fb68b2a0eeca9eb252ab4375d SHA1 a9f5f139fa8706698021cd109ea80dc81cb539b3 SHA256 70022764b371c9fbc3bf8116a8f0f0817436deb1aa9e6bfaf61ada6859d0b930
-MISC ChangeLog 25974 RMD160 7419cd66251b64bc394ed264c2032c54c6c28c85 SHA1 3e6646ec447e7914ee8763e29f6365b145d151c1 SHA256 8e30677ba74c203d0e427c9a97fe55b685499a360428055ed7584a7b428af684
+EBUILD avahi-0.6.24-r2.ebuild 5400 RMD160 f955a49312b3d0b269e08358c1dce3a6ad00f037 SHA1 12f531483b56407b83be6ed2639d79f671c23226 SHA256 8ea2e741aea77123d87ba83f71cdebde92886e8716554916b87a9a79bd67d018
+EBUILD avahi-0.6.25-r1.ebuild 4866 RMD160 ad84c41cae3d7cae4031724eb7689f1f15b9ae30 SHA1 8b65604c02ad5d04968b607de8bf241868be727b SHA256 0bbe2db1ba8453db0f6eae360cc23fd269ce006a83600819284dce1aa3cee97b
+EBUILD avahi-0.6.25.ebuild 5352 RMD160 0fb9fe844fba482fbfc95caf8744b71539c55324 SHA1 353f53cbbf73ed27c5b85629fd2e09374f08a251 SHA256 854cb5b236f3109a227970a9aa99904c1f947680a8bef1345c3e98bdc89d0efa
+MISC ChangeLog 26148 RMD160 16a98ad232a0f11404722090fc9c82c3b92bbd10 SHA1 84db8b548895af9047e7ce863d690cc1e620d347 SHA256 8bbd2b087b249db25e6aaaf46107906ca6dacfaba4f1f8f92d62417257fce959
 MISC metadata.xml 609 RMD160 fa4efaaf9b8ac6d75251c9bd1f0721ea175acda9 SHA1 4532738c9ff6d9d2a2aef226b827919ac31be2de SHA256 365224bb3c21c159a89fa03ea08c534eb27cc2df62012a69e03ad81779607faa
