@@ -1,8 +1,9 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/avahi/avahi-0.6.25.ebuild,v 1.5 2010/01/03 15:23:37 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/avahi/avahi-0.6.25.ebuild,v 1.6 2010/05/19 19:14:47 arfrever Exp $
 
 EAPI="1"
+PYTHON_DEPEND="python? 2"
 
 inherit eutils mono python multilib autotools flag-o-matic
 
@@ -44,7 +45,6 @@ RDEPEND=">=dev-libs/libdaemon-0.11-r1
 	howl-compat? ( !net-misc/howl )
 	mdnsresponder-compat? ( !net-misc/mDNSResponder )
 	python? (
-		>=virtual/python-2.4
 		gtk? ( >=dev-python/pygtk-2 )
 	)
 	bookmarks? (
@@ -61,7 +61,12 @@ DEPEND="${RDEPEND}
 	)"
 
 pkg_setup() {
-	if use python && ! built_with_use dev-lang/python gdbm
+	if use python
+	then
+		python_set_active_version 2
+	fi
+
+	if use python && ! built_with_use "=dev-lang/python-2*" gdbm
 	then
 		die "For python support you need dev-lang/python compiled with gdbm support!"
 	fi
@@ -154,8 +159,7 @@ src_compile() {
 		$(use_enable qt3) \
 		$(use_enable qt4) \
 		$(use_enable gdbm) \
-		${myconf} \
-		|| die "econf failed"
+		${myconf}
 	emake || die "emake failed"
 
 	use doc && emake avahi.devhelp
@@ -188,13 +192,14 @@ src_install() {
 }
 
 pkg_postrm() {
-	use python && python_mod_cleanup
+	if use python; then
+		python_mod_cleanup $(python_get_sitedir)/avahi $(python_get_sitedir)/avahi_discover
+	fi
 }
 
 pkg_postinst() {
 	if use python; then
-		python_version
-		python_mod_optimize /usr/$(get_libdir)/python${PYVER}/site-packages/avahi
+		python_mod_optimize $(python_get_sitedir)/avahi $(python_get_sitedir)/avahi_discover
 	fi
 
 	if use autoipd
