@@ -1,6 +1,10 @@
 # ChangeLog for net-dns/avahi
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/avahi/ChangeLog,v 1.173 2010/02/09 14:02:58 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/avahi/ChangeLog,v 1.174 2010/05/19 19:14:47 arfrever Exp $
+
+  19 May 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  avahi-0.6.24-r2.ebuild, avahi-0.6.25.ebuild, avahi-0.6.25-r1.ebuild:
+  Use Python 2 (bug #315093).
 
 *avahi-0.6.25-r1 (09 Feb 2010)
 
